Created database and migration folder.

--- a/WebServerFinal/appsettings.json
+++ b/WebServerFinal/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BooksDBContext": "Server=(localdb)\\mssqllocaldb;Database=BooksDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
